Usp section: follow design's correct vertical spacing

--- a/src/scss/sections/usp.scss
+++ b/src/scss/sections/usp.scss
@@ -33,8 +33,8 @@
       line-height: 150%;
       letter-spacing: -0.01em;
       text-transform: uppercase;
-
-
+      margin-top: 0;
+      margin-bottom: 0;
 
       @include tablet {
         padding-left: 24px;
